--- a/index.html
+++ b/index.html
@@ -57,23 +57,18 @@
 
         <hr />
 
-        <span class="avatar">
+        <div class="avatar">
           <img class="avatar_img" src="./images/image-avatar.png" alt="avatar" />
           Creation of <a href="#">Jules Wyvern</a>
-        </span>
+        </div>
       </div>
     </section>
 
-    <section>
-      <div class="attribution">
-        <p>
-          Challenge by
-          <a href="https:/  3/www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-            href="#">Omar Cypha</a>.
-        </p>
-      </div>
-    </section>
   </main>
+  <footer class="attribution">
+     Code by <a href="https://github.com/OmarCypha700">OmarCypha</a>.
+</footer>
+
 </body>
 
 </html>
